--- a/.github/workflows/rust-builds.yml
+++ b/.github/workflows/rust-builds.yml
@@ -27,8 +27,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Cache node_modules 📦
-    - uses: Swatinem/rust-cache@v2
+    - name: Cache rust
+      uses: Swatinem/rust-cache@v2
 
     - name: Compile and release
       uses: rust-build/rust-build.action@v1.3.2
